<resources>
    <string name="app_name">My Application</string>
    <string name="judul">BERITA HOT</string>
    <string name="judul1">UFC milik Khabib Nurmagomedov terancam dicabut karena kerusuhan yang terjadi usai petarung asal Rusia itu mengalahkan Conor McGregor .</string>
    <string name="judul2">Cucu pertama Jokowi, Jan Ethes, memang selalu bisa menarik perhatian masyarakat Tanah Air</string>
    <string name="judul3">Korban Gempa Sulteng Terpaksa Mengemis Karena Bantuan Belum Datang</string>
    <string name="lanjutan">Baca Berikutnya</string>
</resources>
